Fix: stabilize dark mode toggle button alignment and dimensions

--- a/_css/basic.css
+++ b/_css/basic.css
@@ -70,17 +70,29 @@ header li a:hover {
   overflow: hidden;
 }
 
+#theme-switch {
+  height: 22px;
+  width: 22px;
+  padding: 0;
+  border: none;
+  background-color: var(--background-color);
+  position: relative;
+  top: 2px !important;
+  padding-top: 2px;
+  margin-top: 4px;
+  margin-left: 7px;
+  margin-right: 7px;
+}
+
+.darkmode #theme-switch {
+  top: 4px !important;
+  padding-top: 2px;
+}
+
 @media (max-width: 480px) {
   header {
     padding-left: 6%;
     padding-right: 6%;
-  }
-}
-
-@media (min-width: 481px) {
-  header {
-    padding-left: 12.5%;
-    padding-right: 12.5%;
   }
 }
 
@@ -161,6 +173,10 @@ instead, display a burger menu.
     z-index: 10000;
     left: 0;
     right: 0;
+  }
+
+  .darkmode #theme-switch {
+    top: 1px !important;
   }
 
   .menu-btn:checked ~ .menu-nav {
@@ -286,23 +302,6 @@ html {
   scroll-padding-top: 62px;
 }
 
-#theme-switch {
-  height: 22px;
-  width: 22px;
-  padding: 0;
-  border: none;
-  background-color: var(--background-color);
-  position: relative;
-  top: 1px;
-  padding-top: 2px;
-  margin-left: 7px;
-  margin-right: 7px;
-}
-
-.darkmode #theme-switch {
-  top: 4px;
-}
-
 #theme-switch svg {
   height: 100%;
   width: 100%;
@@ -334,4 +333,15 @@ html {
 
 button:hover {
   fill: var(--navigation-hover-color);
+}
+
+@media (min-width: 481px) {
+  header {
+    padding-left: 12.5%;
+    padding-right: 12.5%;
+  }
+
+  #theme-switch {
+    top: 0px;
+  }
 }
